test/runnable/test_linkedin_main.d
/*
RUN_OUTPUT:
---
Hello 1
---
*/
import imports.test_linkedin_import;

void main()
{
    import core.stdc.stdio;
    printf("Hello %d\n", f(-11));
}
